Corrects hot-tracked state when space or enter is pressed in a menu

BUG=592356

Review URL: https://codereview.chromium.org/1771863002

Cr-Commit-Position: refs/heads/master@{#379598}

Former-commit-id: 061dd4d14b4941fccce1028d79111ee5d322766e